--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -44,6 +44,7 @@
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main class="pb7" role="main">
       {{ block "main" . }}{{ end }}
+      {{ partial "subscribe.html" . }}
     </main>
     {{ block "footer" . }}{{ partialCached "site-footer.html" . }}{{ end }}
   </body>
