--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -55,6 +55,7 @@
       {{ if .Site.Params.commentoEnable }}
         {{- partial "commento.html" . -}}
       {{ end }}
+      {{ partial "subscribe.html" . }}
       </div>
     </div>
 
